login form styles; new main background color; add background to rows

--- a/client/src/app/components/dashboard/dashboard.scss
+++ b/client/src/app/components/dashboard/dashboard.scss
@@ -6,10 +6,16 @@
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
+  background: $neutral-light;
 }
 
 .home__reports{
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
+  background: $neutral-light;
+}
+
+.workouts__row{
+  background: $neutral-light;
 }
