--- a/client/src/app/components/profile/profile.scss
+++ b/client/src/app/components/profile/profile.scss
@@ -6,6 +6,7 @@
   box-shadow: 1px 1px 1px 1px #aaa;
   padding: 20px;
   margin-bottom: 20px;
+  background: $neutral-light;
 
   .field-group{
     max-width: 300px;
