--- a/client/src/app/components/workouts/workoutSingle.scss
+++ b/client/src/app/components/workouts/workoutSingle.scss
@@ -10,16 +10,19 @@
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
+  background: $neutral-light;
 }
 
 .workout-single__details{
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
+  background: $neutral-light;
 }
 
 .workout-single__exercise{
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
+  background: $neutral-light;
 }
