--- a/client/src/app/components/workouts/workouts.scss
+++ b/client/src/app/components/workouts/workouts.scss
@@ -11,6 +11,7 @@
    box-shadow: 1px 1px 1px 1px #aaa;
   padding: 20px;
   margin-bottom: 20px;
+  background: $neutral-light;
 
   &:last-child{
     margin-bottom: 0px;
