--- a/client/src/app/components/workouts/workoutForm.scss
+++ b/client/src/app/components/workouts/workoutForm.scss
@@ -6,6 +6,7 @@
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
+  background: $neutral-light;
 
 }
 
@@ -14,4 +15,5 @@
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
   width: 100%;
+  background: $neutral-light;
 }
