start updating workout/exercise form; update dashboard styles

--- a/client/src/app/components/dashboard/dashboard.scss
+++ b/client/src/app/components/dashboard/dashboard.scss
@@ -1,15 +1,15 @@
-.home{
+.dashboard{
  
 }
 
-.home__actions{
+.dashboard__actions{
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
   background: $neutral-light;
 }
 
-.home__reports{
+.dashboard__reports{
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 1px 1px 1px 1px #aaa;
