--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -2250,6 +2250,15 @@ input[type='file'] {
   justify-content: center;
   flex-direction: row; }
 
+.footer__text {
+  font-size: 0.8em; }
+
+@media screen and (max-width: 768px) {
+  body .app {
+    flex-direction: column; }
+  body .app__title {
+    font-size: 1.5em; } }
+
 .avatar {
   width: 50px;
   height: 50px; }
