--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -425,12 +425,6 @@ template {
 .right {
   float: right; }
 
-@media screen and (max-width: 768px) {
-  body .app {
-    flex-direction: column; }
-  body .sidebar {
-    flex: 0 0 100px; } }
-
 /* ----- TOOLS ----- */
 /* ----- GENERIC ----- */
 /* -- NORMALIZE -- */
@@ -853,12 +847,6 @@ template {
 
 .right {
   float: right; }
-
-@media screen and (max-width: 768px) {
-  body .app {
-    flex-direction: column; }
-  body .sidebar {
-    flex: 0 0 100px; } }
 
 /*
 Styling for bare, unclassed elements. This layer binds onto bare HTML element (or 'type') selectors only.
@@ -2181,13 +2169,29 @@ input {
     background: white;
     border: 2px solid #618DFF; }
   .button.-light {
-    background: #F8FCFF;
+    background: red;
     color: #4A4D54;
     border: 2px solid #F8FCFF; }
     .button.-light:hover {
       background: #618DFF;
       color: #F8FCFF;
       border: 2px solid #618DFF; }
+  .button.-warning {
+    background: red;
+    color: #F8FCFF;
+    border: 2px solid red; }
+    .button.-warning:hover {
+      background: #F8FCFF;
+      color: red;
+      border: 2px solid red; }
+  .button.-cancel {
+    background: #4A4D54;
+    color: #F8FCFF;
+    border: 2px solid #4A4D54; }
+    .button.-cancel:hover {
+      background: #F8FCFF;
+      color: #4A4D54;
+      border: 2px solid #4A4D54; }
   .button:active {
     transform: translateY(1px); }
 
@@ -2259,6 +2263,29 @@ input[type='file'] {
   body .app__title {
     font-size: 1.5em; } }
 
+.login {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%; }
+
+.login__title {
+  padding: 0px 0px 10px; }
+
+.login__subtitle {
+  color: white; }
+
+.login__form {
+  margin-top: 20px; }
+
+.login__sign-up-link {
+  text-decoration: underline;
+  color: white; }
+  .login__sign-up-link:hover {
+    color: #618DFF; }
+
 .avatar {
   width: 50px;
   height: 50px; }
@@ -2304,35 +2331,6 @@ input[type='file'] {
 .exercise-set__button {
   padding: 5px 10px; }
 
-.login {
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%; }
-
-.login__title {
-  padding: 0px 0px 10px; }
-
-.login__subtitle {
-  color: white; }
-
-.login__form {
-  margin-top: 20px; }
-
-.login__sign-up-link {
-  text-decoration: underline;
-  color: white; }
-  .login__sign-up-link:hover {
-    color: #618DFF; }
-
-.main {
-  height: 100vh;
-  flex: 1 1 auto;
-  overflow: scroll;
-  background: #4A4D54; }
-
 .profile__form {
   box-shadow: 1px 1px 1px 1px #aaa;
   padding: 20px;
@@ -2348,6 +2346,107 @@ input[type='file'] {
 
 .profile__form__image-upload {
   background: transparent; }
+
+.main {
+  height: 100vh;
+  flex: 1 1 auto;
+  overflow: scroll;
+  background: #4A4D54; }
+
+.workout-form__actions {
+  margin-bottom: 20px;
+  padding: 10px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  background: #F8FCFF; }
+
+.workout-form__fields {
+  margin-bottom: 20px;
+  padding: 10px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  width: 100%;
+  background: #F8FCFF; }
+
+.workout-form__actions__button {
+  margin-right: 20px; }
+
+.workout-single__button {
+  margin-right: 20px; }
+
+.workout-single__actions {
+  margin-bottom: 20px;
+  padding: 10px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  background: #F8FCFF; }
+
+.workout-single__details {
+  margin-bottom: 20px;
+  padding: 10px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  background: #F8FCFF; }
+
+.workout-single__exercise {
+  margin-bottom: 20px;
+  padding: 10px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  background: #F8FCFF; }
+
+.workouts__row {
+  opacity: 1;
+  transition: opacity 100ms linear;
+  cursor: pointer;
+  display: flex;
+  flex-wrap: wrap;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  padding: 10px;
+  margin-bottom: 20px;
+  background: #F8FCFF; }
+  .workouts__row:last-child {
+    margin-bottom: 0px; }
+  .workouts__row:hover {
+    opacity: 0.5; }
+  .workouts__row:active {
+    transform: translateY(1px); }
+
+.workouts__row__title {
+  flex: 0 0 100%;
+  padding: 0px; }
+
+.workouts__row__date {
+  flex: 1 1 25%; }
+
+.workouts__row__start-time {
+  flex: 1 1 25%; }
+
+.workouts__row__end-time {
+  flex: 1 1 25%; }
+
+.workouts__row__details {
+  flex: 1 1 25%;
+  text-align: right; }
+
+.sign-up {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%; }
+  .sign-up .error {
+    padding: 0px 0px 10px;
+    color: red; }
+
+.sign-up__form {
+  background: white;
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa; }
+
+.sign-up__sign-up-link {
+  text-decoration: underline;
+  color: blue;
+  margin: 10px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  padding: 20px 39px; }
 
 .sidebar {
   background: #f9fbff;
@@ -2441,97 +2540,6 @@ input[type='file'] {
     justify-content: center; }
   body .sidebar__nav__list__item {
     margin: 20px; } }
-
-.sign-up {
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%; }
-  .sign-up .error {
-    padding: 0px 0px 10px;
-    color: red; }
-
-.sign-up__form {
-  background: white;
-  margin: 20px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa; }
-
-.sign-up__sign-up-link {
-  text-decoration: underline;
-  color: blue;
-  margin: 10px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  padding: 20px 39px; }
-
-.workout-form__actions {
-  margin-bottom: 20px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  background: #F8FCFF; }
-
-.workout-form__fields {
-  margin-bottom: 20px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  width: 100%;
-  background: #F8FCFF; }
-
-.workout-single__button {
-  margin-right: 20px; }
-
-.workout-single__actions {
-  margin-bottom: 20px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  background: #F8FCFF; }
-
-.workout-single__details {
-  margin-bottom: 20px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  background: #F8FCFF; }
-
-.workout-single__exercise {
-  margin-bottom: 20px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  background: #F8FCFF; }
-
-.workouts__row {
-  opacity: 1;
-  transition: opacity 100ms linear;
-  cursor: pointer;
-  display: flex;
-  flex-wrap: wrap;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  padding: 20px;
-  margin-bottom: 20px;
-  background: #F8FCFF; }
-  .workouts__row:last-child {
-    margin-bottom: 0px; }
-  .workouts__row:hover {
-    opacity: 0.5; }
-  .workouts__row:active {
-    transform: translateY(1px); }
-
-.workouts__row__title {
-  flex: 0 0 100%; }
-
-.workouts__row__date {
-  flex: 1 1 25%; }
-
-.workouts__row__start-time {
-  flex: 1 1 25%; }
-
-.workouts__row__end-time {
-  flex: 1 1 25%; }
-
-.workouts__row__details {
-  flex: 1 1 25%;
-  text-align: right; }
 
 /* endinject */
 /* ----- UTILITIES ----- */
