--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -2263,6 +2263,63 @@ input[type='file'] {
   body .app__title {
     font-size: 1.5em; } }
 
+.exercise-form {
+  box-shadow: 1px 1px 1px 1px #aaa;
+  padding: 20px;
+  margin-bottom: 20px;
+  background: #F8FCFF; }
+
+.exercise-form__fields th {
+  text-align: left; }
+
+.exercise-set__button {
+  padding: 5px 10px; }
+
+.dashboard__actions {
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  background: #F8FCFF; }
+
+.dashboard__reports {
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  background: #F8FCFF; }
+
+.workouts__row {
+  background: #F8FCFF; }
+
+.login {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%; }
+
+.login__title {
+  padding: 0px 0px 10px; }
+
+.login__subtitle {
+  color: white; }
+
+.login__form {
+  margin-top: 0px; }
+
+.login__sign-up-link {
+  text-decoration: underline;
+  color: white; }
+  .login__sign-up-link:hover {
+    color: #618DFF; }
+
+.login__error__details {
+  font-size: 0.8em;
+  color: red; }
+
+.login__error {
+  height: 40px; }
+
 .avatar {
   width: 50px;
   height: 50px; }
@@ -2281,32 +2338,11 @@ input[type='file'] {
   .avatar.sidebar__avatar {
     margin: 20px auto; }
 
-.dashboard__actions {
-  margin-bottom: 20px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  background: #F8FCFF; }
-
-.dashboard__reports {
-  margin-bottom: 20px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  background: #F8FCFF; }
-
-.workouts__row {
-  background: #F8FCFF; }
-
-.exercise-form {
-  box-shadow: 1px 1px 1px 1px #aaa;
-  padding: 20px;
-  margin-bottom: 20px;
-  background: #F8FCFF; }
-
-.exercise-form__fields th {
-  text-align: left; }
-
-.exercise-set__button {
-  padding: 5px 10px; }
+.main {
+  height: 100vh;
+  flex: 1 1 auto;
+  overflow: scroll;
+  background: #4A4D54; }
 
 .profile__form {
   box-shadow: 1px 1px 1px 1px #aaa;
@@ -2323,6 +2359,99 @@ input[type='file'] {
 
 .profile__form__image-upload {
   background: transparent; }
+
+.sidebar {
+  background: #f9fbff;
+  color: #333;
+  flex: 0 0 200px;
+  padding: 20px;
+  height: 100vh;
+  border-right: 1px solid #ddd;
+  border-bottom: none; }
+
+.sidebar__nav {
+  display: block; }
+
+.sidebar__nav__list {
+  list-style: none;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center; }
+
+.sidebar__nav__list__item a {
+  text-decoration: none;
+  color: #4A4D54;
+  display: block;
+  margin: 5px;
+  cursor: pointer; }
+  .sidebar__nav__list__item a.active {
+    color: #618DFF; }
+
+.sidebar__avatar {
+  margin: 0px auto; }
+
+.sidebar__title {
+  text-align: center; }
+
+.sidebar__nav__toggle {
+  display: none;
+  cursor: pointer;
+  position: absolute;
+  top: 11px;
+  right: 20px;
+  z-index: 200; }
+  .sidebar__nav__toggle:hover .sidebar__nav__icon {
+    background: #618DFF; }
+
+.sidebar__nav__icon {
+  -ms-transform: 0.3s ease-in-out;
+  /* IE 9 */
+  -webkit-transform: 0.3s ease-in-out;
+  /* Safari */
+  transition: 0.3s ease-in-out;
+  background: #bbb;
+  height: 3px;
+  width: 30px;
+  display: block;
+  margin: 5px; }
+  .sidebar__nav__icon.-top.rotated {
+    transform: rotate(45deg) translate(6px, 6px); }
+  .sidebar__nav__icon.-middle {
+    opacity: 1; }
+    .sidebar__nav__icon.-middle.rotated {
+      opacity: 0; }
+  .sidebar__nav__icon.-bottom.rotated {
+    transform: rotate(-45deg) translate(5px, -5px); }
+
+@media screen and (max-width: 768px) {
+  body .sidebar {
+    display: flex;
+    flex: 0 0 50px;
+    padding: 5px 20px;
+    align-items: center; }
+  body .sidebar__title {
+    text-align: center;
+    font-size: 18px; }
+  body .avatar.sidebar__avatar {
+    margin: 0px auto; }
+  body .sidebar__nav__toggle {
+    display: block; }
+  body .sidebar__nav {
+    display: flex;
+    padding: 20px;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: white;
+    top: -100%;
+    left: 0px;
+    z-index: 99;
+    transition: 0.2s top ease-in-out;
+    justify-content: center; }
+  body .sidebar__nav__list__item {
+    margin: 20px; } }
 
 .sign-up {
   display: flex;
@@ -2418,133 +2547,6 @@ input[type='file'] {
 .workouts__row__details {
   flex: 1 1 25%;
   text-align: right; }
-
-.login {
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%; }
-
-.login__title {
-  padding: 0px 0px 10px; }
-
-.login__subtitle {
-  color: white; }
-
-.login__form {
-  margin-top: 20px; }
-
-.login__sign-up-link {
-  text-decoration: underline;
-  color: white; }
-  .login__sign-up-link:hover {
-    color: #618DFF; }
-
-.login__error {
-  font-size: 1em;
-  color: red;
-  height: 20px; }
-
-.main {
-  height: 100vh;
-  flex: 1 1 auto;
-  overflow: scroll;
-  background: #4A4D54; }
-
-.sidebar {
-  background: #f9fbff;
-  color: #333;
-  flex: 0 0 200px;
-  padding: 20px;
-  height: 100vh;
-  border-right: 1px solid #ddd;
-  border-bottom: none; }
-
-.sidebar__nav {
-  display: block; }
-
-.sidebar__nav__list {
-  list-style: none;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center; }
-
-.sidebar__nav__list__item a {
-  text-decoration: none;
-  color: #4A4D54;
-  display: block;
-  margin: 5px;
-  cursor: pointer; }
-  .sidebar__nav__list__item a.active {
-    color: #618DFF; }
-
-.sidebar__avatar {
-  margin: 0px auto; }
-
-.sidebar__title {
-  text-align: center; }
-
-.sidebar__nav__toggle {
-  display: none;
-  cursor: pointer;
-  position: absolute;
-  top: 11px;
-  right: 20px;
-  z-index: 200; }
-  .sidebar__nav__toggle:hover .sidebar__nav__icon {
-    background: #618DFF; }
-
-.sidebar__nav__icon {
-  -ms-transform: 0.3s ease-in-out;
-  /* IE 9 */
-  -webkit-transform: 0.3s ease-in-out;
-  /* Safari */
-  transition: 0.3s ease-in-out;
-  background: #bbb;
-  height: 3px;
-  width: 30px;
-  display: block;
-  margin: 5px; }
-  .sidebar__nav__icon.-top.rotated {
-    transform: rotate(45deg) translate(6px, 6px); }
-  .sidebar__nav__icon.-middle {
-    opacity: 1; }
-    .sidebar__nav__icon.-middle.rotated {
-      opacity: 0; }
-  .sidebar__nav__icon.-bottom.rotated {
-    transform: rotate(-45deg) translate(5px, -5px); }
-
-@media screen and (max-width: 768px) {
-  body .sidebar {
-    display: flex;
-    flex: 0 0 50px;
-    padding: 5px 20px;
-    align-items: center; }
-  body .sidebar__title {
-    text-align: center;
-    font-size: 18px; }
-  body .avatar.sidebar__avatar {
-    margin: 0px auto; }
-  body .sidebar__nav__toggle {
-    display: block; }
-  body .sidebar__nav {
-    display: flex;
-    padding: 20px;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: white;
-    top: -100%;
-    left: 0px;
-    z-index: 99;
-    transition: 0.2s top ease-in-out;
-    justify-content: center; }
-  body .sidebar__nav__list__item {
-    margin: 20px; } }
 
 /* endinject */
 /* ----- UTILITIES ----- */
